--- a/src/app/Planner/planner-page/planner-page.component.html
+++ b/src/app/Planner/planner-page/planner-page.component.html
@@ -12,6 +12,11 @@
     </div>
     </div>
     </div>
+    <div class="container float-right text-right mt-0 clearfix">
+        <button type="button" class="btn btn-outline-success"
+               tooltip="click for adding an event"style="width: auto" [disabled]="issubscribed" (click)="subscribe()" >Pay Now!
+              </button>
+            </div>
     <div class="card">
         <div class="card-body">
 <span class="badge badge-light"><h5>Name:</h5></span><span>Planner 1</span><br/>
